# jarvis

./: .env.example  .gitignore  LICENSE  README.md  create_bucket.sh  docker-compose.yml
backend/: Dockerfile  README.md  fly.toml  pyproject.toml
backend/jarvis/: app.py
backend/jarvis/agent/: base.py  basic.py  react.py  utils.py
backend/jarvis/api/: api.py
backend/jarvis/api/middleware/: __init__.py  auth.py  error.py  logging.py  ratelimit.py  request_id.py  security.py
backend/jarvis/api/routers/: __init__.py  chat.py  doc.py  misc.py  personality.py  question_pack.py
backend/jarvis/auth/: auth.py
backend/jarvis/blob_storage/: __init__.py  gcs.py  s3.py  storage.py
backend/jarvis/chat/: chat_title.py
backend/jarvis/cleanup/: cleanup.py
backend/jarvis/context/: __init__.py  context.py
backend/jarvis/db/: db.py  migrations.py
backend/jarvis/db/migration_sql/: jarvis.sql
backend/jarvis/document_pack/: type.py
backend/jarvis/document_parsers/: csv.py  gemini.py  llamaparse.py  parser.py  txt.py  type.py  utils.py
backend/jarvis/graphrag/: cfg.yaml  graphrag.py  preprocess.py  workflow.py
backend/jarvis/messages/: history.py  test_history.py  type.py  utils.py
backend/jarvis/models/: __init__.py  antrophic.py  google.py  models.py  openai.py  type.py
backend/jarvis/namespaces/: __init__.py  base.py  jarvis.py
backend/jarvis/queries/: query_handlers.py
backend/jarvis/question_pack/: retriever.py  type.py
backend/jarvis/tools/: __init__.py  document_pack.py  question_pack.py  search.py  tools.py
frontend/: .dockerignore  Dockerfile  (+6 more)
(+158 files in other folders)
